# LibNumToHex

./: CMakeLists.txt  CMakeLists.txt.user.96cd04c  README.md  lib.cpp  lib.h
include/LibConvert/: lib.h
source/: lib.cpp
